--- a/roles/terraform/tasks/vagrant.yml
+++ b/roles/terraform/tasks/vagrant.yml
@@ -35,7 +35,7 @@
   when: ansible_facts['os_family'] == 'RedHat'
   become: yes
 
-- name: adding existing user '{{ username }}' to group sudo
+- name: adding existing user '{{ username }}' to group libvirt
   user:
     name: '{{ username }}'
     groups: libvirt
