--- a/roles/server/tasks/install_packages.yml
+++ b/roles/server/tasks/install_packages.yml
@@ -9,20 +9,20 @@
 
 - name: Install packages rpm
   package:
-    name: [zsh, acl, git, curl, neovim, nodejs, python3, python3-pip, python3-setuptools]
+    name: [zsh, acl, git, curl, gcc, gcc-c++, fuse, nodejs, python3, python3-pip, python3-setuptools, python3-devel, unzip]
     state: latest
   when: ansible_facts['os_family'] == "RedHat" or ansible_facts['os_family'] == "Suse"
 
 - name: Install packages apt
   apt:
-    name: [zsh, acl, git, curl, neovim, nodejs, python3, python3-pip, python3-setuptools, python3-neovim]
+    name: [zsh, acl, git, curl, fuse, nodejs, python3, python3-pip, python3-setuptools, python3-neovim, unzip]
     state: present
     update_cache: yes
   when: ansible_facts['os_family'] == "Debian"
 
 - name: Install packages swupd
   swupd:
-    name: 'zsh git acl curl neovim nodejs-basic python3-basic'
+    name: 'c-basic zsh git acl curl fuse nodejs-basic python3-basic unzip'
     state: present
   when: ansible_facts['os_family'] == 'ClearLinux'
 
@@ -47,13 +47,20 @@
     state: directory
   become: yes
   become_user: "{{ zsh_user }}"
-  when: ansible_facts['distribution'] == "CentOS"
 
 - name: Download neovim appimage on CentOS
   get_url: 
-    url: https://github.com/neovim/neovim/releases/download/v0.6.0/nvim.appimage
+    url: https://github.com/neovim/neovim/releases/download/v0.8.2/nvim.appimage
     dest: /home/{{ zsh_user }}/.local/bin/nvim.appimage
     mode: '0755'
   become: yes
   become_user: "{{ zsh_user }}"
-  when: ansible_facts['distribution'] == "CentOS"
+
+- name: Install fonts
+  with_items:
+    - "Hack"
+    - "JetBrainsMono"
+  include_role:
+    name: nerd-font
+  vars:
+    font: "{{ item }}"
