--- a/roles/server/tasks/main.yml
+++ b/roles/server/tasks/main.yml
@@ -1,3 +1,3 @@
 ---
-- include: install_packages.yml
-- include: clone_dotfiles.yml
+- import_tasks: install_packages.yml
+- import_tasks: clone_dotfiles.yml
