--- a/roles/server/tasks/clone_dotfiles.yml
+++ b/roles/server/tasks/clone_dotfiles.yml
@@ -38,6 +38,12 @@
     shell: /bin/zsh
 
 - name: Rustup install
-  shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+  shell: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y --no-modify-path
+  become: yes
+  become_user: "{{ zsh_user }}"
+
+
+- name: Install ripgrep
+  shell: cargo install ripgrep
   become: yes
   become_user: "{{ zsh_user }}"
