--- a/roles/terraform/vars/main.yml
+++ b/roles/terraform/vars/main.yml
@@ -1,3 +1,32 @@
 ---
 terraform_libvirt_plugin_vers: 0.6.3
 username: "{{ ansible_user_id }}"
+user_groups:
+  - libvirt
+  - vagrant
+
+sudoers_redhat: |
+  Cmnd_Alias VAGRANT_EXPORTS_CHOWN = /bin/chown 0\:0 /tmp/vagrant-exports
+  Cmnd_Alias VAGRANT_EXPORTS_MV = /bin/mv -f /tmp/vagrant-exports /etc/exports
+  Cmnd_Alias VAGRANT_NFSD_CHECK = /usr/bin/systemctl status --no-pager nfs-server.service
+  Cmnd_Alias VAGRANT_NFSD_START = /usr/bin/systemctl start nfs-server.service
+  Cmnd_Alias VAGRANT_NFSD_APPLY = /usr/sbin/exportfs -ar
+  %vagrant ALL=(root) NOPASSWD: VAGRANT_EXPORTS_CHOWN, VAGRANT_EXPORTS_MV, VAGRANT_NFSD_CHECK, VAGRANT_NFSD_START, VAGRANT_NFSD_APPLY
+
+sudoers_suse: |
+  Cmnd_Alias VAGRANT_CHOWN = /usr/bin/chown 0\:0 /tmp/vagrant-exports
+  Cmnd_Alias VAGRANT_MV = /usr/bin/mv -f /tmp/vagrant-exports /etc/exports
+  Cmnd_Alias VAGRANT_START = /usr/bin/systemctl start --no-pager nfs-server
+  Cmnd_Alias VAGRANT_STATUS = /usr/bin/systemctl status --no-pager nfs-server
+  Cmnd_Alias VAGRANT_APPLY = /usr/sbin/exportfs -ar
+  %vagrant ALL=(root) NOPASSWD: VAGRANT_CHOWN, VAGRANT_MV, VAGRANT_START, VAGRANT_STATUS, VAGRANT_APPLY
+
+sudoers_linux: |
+  Cmnd_Alias VAGRANT_EXPORTS_CHOWN = /bin/chown 0\:0 /tmp/vagrant-exports
+  Cmnd_Alias VAGRANT_EXPORTS_MV = /bin/mv -f /tmp/vagrant-exports /etc/exports
+  Cmnd_Alias VAGRANT_NFSD_CHECK = /etc/init.d/nfs-kernel-server status
+  Cmnd_Alias VAGRANT_NFSD_START = /etc/init.d/nfs-kernel-server start
+  Cmnd_Alias VAGRANT_NFSD_APPLY = /usr/sbin/exportfs -ar
+  %sudo ALL=(root) NOPASSWD: VAGRANT_EXPORTS_CHOWN, VAGRANT_EXPORTS_MV, VAGRANT_NFSD_CHECK, VAGRANT_NFSD_START, VAGRANT_NFSD_APPLY
+
+sudoers: "{{ lookup('vars', 'sudoers_'+ansible_os_family|lower, default=sudoers_linux) }}"
