--- a/roles/server/tasks/install_packages.yml
+++ b/roles/server/tasks/install_packages.yml
@@ -1,10 +1,22 @@
 ---
 - name: Distro debug
-  debug: "msg='Detected os_family: {{ ansible_facts['os_family'] }} and distribution: {{ ansible_facts['distribution'] }}'"
+  debug: "msg='Detected os_family: {{ ansible_os_family }} and distribution: {{ ansible_distribution }} version: {{ ansible_distribution_major_version }}'"
+
+- name: Ensure the crb repository is enabled
+  community.general.dnf_config_manager:
+    name: crb
+    state: enabled
+  when: ansible_distribution == "RedHat" and ansible_distribution_major_version >= 9
+
+- name: Ensure the crb repository is enabled
+  community.general.dnf_config_manager:
+    name: powertools
+    state: enabled
+  when: ansible_distribution == "RedHat" and ansible_distribution_major_version == 8
 
 - name: install the epel repo
   dnf:
-    name: https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm
+    name: epel-release
     state: present
     disable_gpg_check: yes
   when: ansible_facts['distribution'] == "CentOS" or ansible_facts['distribution'] == "RedHat"
@@ -77,7 +89,7 @@
 
 - name: Download neovim appimage on CentOS
   get_url:
-    url: https://github.com/neovim/neovim/releases/download/v0.8.2/nvim.appimage
+    url: https://github.com/neovim/neovim/releases/latest/download/nvim.appimage
     dest: /home/{{ zsh_user }}/.local/bin/nvim.appimage
     mode: "0755"
   become: yes
