--- a/roles/server/tasks/install_packages.yml
+++ b/roles/server/tasks/install_packages.yml
@@ -6,7 +6,7 @@
   community.general.dnf_config_manager:
     name: crb
     state: enabled
-  when: ansible_distribution == "RedHat" and ansible_distribution_major_version >= 9
+  when: ansible_distribution == "RedHat" and ansible_distribution_major_version == 9
 
 - name: Ensure the crb repository is enabled
   community.general.dnf_config_manager:
